infra/k8s/followships-mysql-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: followships-mysql-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: followships-mysql
  template:
    metadata:
      labels:
        app: followships-mysql
    spec:
      containers:
        - name: followships-mysql
          image: mysql
---
apiVersion: v1
kind: Service
metadata:
  name: followships-mysql-srv
spec:
  selector:
    app: followships-mysql
  ports:
    - name: db
      protocol: TCP
      port: 3306
      targetPort: 3306
