infra/k8s/subscribeships-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: subscribeships-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: subscribeships
  template:
    metadata:
      labels:
        app: subscribeships
    spec:
      containers:
        - name: subscribeships
          image: a71816/mirco-twitter-subscribeships
---
apiVersion: v1
kind: Service
metadata:
  name: subscribeships-srv
spec:
  selector:
    app: subscribeships
  ports:
    - name: subscribeships
      protocol: TCP
      port: 3000
      targetPort: 3000
