infra/k8s/subscribeships-mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: subscribeships-mysql-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: subscribeships-mysql
  template:
    metadata:
      labels:
        app: subscribeships-mysql
    spec:
      containers:
        - name: subscribeships-mysql
          image: mysql
---
apiVersion: v1
kind: Service
metadata:
  name: subscribeships-mysql-srv
spec:
  selector:
    app: subscribeships-mysql
  ports:
    - name: db
      protocol: TCP
      port: 8080
      targetPort: 8080
